--- a/package.json
+++ b/package.json
@@ -10,16 +10,13 @@
   },
   "dependencies": {
     "@fillout/react": "^1.1.1",
-    "@netlify/plugin-nextjs": "^5.3.2",
     "framer-motion": "^11.1.7",
     "list-react-files": "^0.2.0",
-    "netlify-cli": "^17.25.0",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-loading-skeleton": "^3.4.0",
-    "react-responsive-masonry": "^2.2.0",
-    "yarn": "^1.22.22"
+    "react-responsive-masonry": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
