--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fillout/react": "^1.1.1",
+    "@netlify/plugin-nextjs": "^5.3.2",
     "framer-motion": "^11.1.7",
     "list-react-files": "^0.2.0",
     "next": "14.2.1",
